tests/NormalTests/paczka1/small_fuzzy/78790512.err
Error in line 1: 3HL S756 86,7
Error in line 6: QjL3T S612 99,0
Error in line 7: S858 S756 21,3
